--- a/news_board/Pipfile
+++ b/news_board/Pipfile
@@ -22,6 +22,8 @@ sqlparse = "==0.3.1"
 urllib3 = "==1.25.9"
 psycopg2-binary = "*"
 whitenoise = "*"
+django-allauth = "*"
+dj-database-url = "*"
 
 [dev-packages]
 
