--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,36 @@
+appdirs==1.4.4
 asgiref==3.2.7
+attrs==19.3.0
+black==19.10b0
 certifi==2020.6.20
 chardet==3.0.4
-django>=3.0.7
+click==7.1.2
+defusedxml==0.6.0
+dj-database-url==0.5.0
+Django==3.0.8
+django-allauth==0.42.0
 django-compat==1.0.15
 django-extensions==3.0.1
 djangorestframework==3.11.0
+greenlet==0.4.16
 gunicorn==20.0.4
 heroku==0.1.4
 idna==2.10
+msgpack==1.0.0
+neovim==0.3.1
+oauthlib==3.1.0
+pathspec==0.8.0
+psycopg2-binary==2.8.5
+pynvim==0.4.1
 python-dateutil==1.5
+python3-openid==3.2.0
 pytz==2019.3
+regex==2020.6.8
 requests==2.24.0
+requests-oauthlib==1.3.0
 six==1.15.0
 sqlparse==0.3.1
+toml==0.10.1
+typed-ast==1.4.1
 urllib3==1.25.9
+whitenoise==5.1.0
