--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ chardet==3.0.4
 click==7.1.2
 defusedxml==0.6.0
 dj-database-url==0.5.0
-django = ">=3.1.12"
+Django = ">=3.1.13"
 django-allauth==0.42.0
 django-compat==1.0.15
 django-extensions==3.0.1
